<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cam_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".CamActivity">

    <TextureView
        android:id="@+id/textureView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="120dp"
        android:layout_marginTop="30dp"
        />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/btn_capture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        style="@style/CircleButton"

        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_load"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"

        android:text="@string/cam_btn_load"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_save"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"

        android:text="@string/cam_btn_save"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textureView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:id="@+id/txt_iso"
            style="@style/cam_textview"
            android:text="@string/ISO_txt"/>
        <TextView
            android:id="@+id/txt_speed"
            style="@style/cam_textview"
            android:text="@string/Speed_txt"/>
        <TextView
            android:id="@+id/txt_ev"
            style="@style/cam_textview"
            android:text="@string/EV_txt"/>
        <TextView
            android:id="@+id/txt_wb"
            style="@style/cam_textview"
            android:text="@string/WB_txt"/>
        <TextView
            android:id="@+id/txt_zoom"
            style="@style/cam_textview"
            android:text="@string/Zoom_txt"/>
    </LinearLayout>
    <androidx.appcompat.widget.SwitchCompat
        app:layout_constraintTop_toTopOf="@id/textureView"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/Focus_txt"
        android:checked="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sw_autoFocus"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/auto_exposure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:checked="true"
        android:text="@string/Exposure_txt"
        app:layout_constraintTop_toTopOf="@id/textureView"
        app:layout_constraintStart_toStartOf="parent"/>
    <LinearLayout
        android:id="@+id/layout_selected_function"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/textureView"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <TextView
                android:visibility="invisible"
                android:id="@+id/txt_min_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:text="@string/min_value"/>
            <TextView
                android:id="@+id/txt_current_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/yellow"
                android:text="@string/current_value"/>
            <TextView
                android:visibility="invisible"
                android:id="@+id/txt_max_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:text="@string/max_value"/>

        </LinearLayout>
        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/sk_mod_value"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:max="1000"
            android:min="0"
            android:progressTint="@color/blue"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>